--- a/templates/base.html
+++ b/templates/base.html
@@ -55,6 +55,14 @@
               <i class="bi bi-folder2-open me-1"></i>Ordens de Serviço
             </a>
           </li>
+          {% if current_user.is_authenticated %}
+            <li class="nav-item">
+              <a class="nav-link text-danger" href="{{ url_for('logout') }}">
+                <i class="bi bi-box-arrow-right me-1"></i> Sair
+              </a>
+            </li>
+          {% endif %}
+
         </ul>
         <button id="themeToggle" class="theme-toggle ms-3" title="Alternar tema">
           <i id="themeIcon" class="bi bi-moon"></i>
