--- a/templates/base_publica.html
+++ b/templates/base_publica.html
@@ -74,6 +74,14 @@
           <li class="nav-item">
             <a class="nav-link" href="{{ url_for('login_cliente') }}">Área do Cliente</a>
           </li>
+          {% if current_user.is_authenticated %}
+            <li class="nav-item">
+              <a class="nav-link text-danger" href="{{ url_for('logout') }}">
+                <i class="bi bi-box-arrow-right me-1"></i> Sair
+              </a>
+            </li>
+          {% endif %}
+
         </ul>
         <button id="themeToggle" class="theme-toggle ms-3" title="Alternar tema">
           <i id="themeIcon" class="bi bi-moon"></i>
