--- a/templates/detalhes_os.html
+++ b/templates/detalhes_os.html
@@ -56,7 +56,7 @@
     </form>
 </div>
 
-<div class="card mt-4">
+<div class="card mt-4" id="fotos_equipamento">
     <h4 class="card-header">Fotos do Equipamento</h4>
     <div class="card-body">
         <div class="row row-cols-1 row-cols-md-3 g-4">
@@ -97,7 +97,7 @@
 </div>
 
 
-<div class="card mt-3">
+<div class="card mt-3" id="adicionar-foto">
     <h4 class="card-header">Adicionar Fotos</h4>
     <form class="card-body" method="post" action="{{ url_for('adicionar_foto', os_id=ordem_servico.id) }}" enctype="multipart/form-data">
         <div class="row align-items-end">
@@ -145,7 +145,7 @@
     </table>
 </div>
 
-<div class="card mt-3">
+<div class="card mt-3" id="adicionar_servico">
     <h4 class="card-header text-center">Adicionar Serviço</h4>
     <form method="post" action="{{ url_for('adicionar_servico', os_id=ordem_servico.id) }}">
         <div class="card-body">
@@ -200,7 +200,7 @@
         </tbody>
     </table>
 </div>
-<div class="card mt-3">
+<div class="card mt-3" id="adicionar_peca">
     <h4 class="card-header text-center">Adicionar Peça</h4>
     <form method="post" action="{{ url_for('adicionar_peca', os_id=ordem_servico.id) }}">
         <div class="card-body">
