padding no templatepdf ajustado

--- a/templates/template_pdf.html
+++ b/templates/template_pdf.html
@@ -24,7 +24,7 @@
         }
         .items-table th, .items-table td {
             border: 1px solid #ccc;
-            padding: 6px;
+            padding: 3px;
             text-align: left;
         }
         .items-table th {
@@ -39,19 +39,19 @@
         }
         .section-header {
             background-color: #f2f2f2;
-            padding: 6px;
+            padding: 3px;
             font-weight: bold;
-            margin: 12px 0 6px 0;
+            margin: 3px 0 3px 0;
         }
         .total-table {
             width: 40%;
             margin-left: auto;
             border-collapse: collapse;
-            margin-top: 12px;
+            margin-top: 6px;
         }
         .total-table td {
-            border: 1px solid #ccc;
-            padding: 6px;
+            border: 1px solid #a8a8a8;
+            padding: 3px;
             font-weight: bold;
         }
         .fotos-table {
