--- a/templates/listar_clientes.html
+++ b/templates/listar_clientes.html
@@ -2,11 +2,14 @@
 
 {% block content %}
 <div class="d-flex justify-content-center">
-    <div class="card shadow-sm w-100 rounded-3 mx-auto my-3" style="max-width: 50rem">
+    <div class="card shadow-sm w-100 rounded-3 mx-auto my-3" style="max-width: 45rem">
         <h4 class="card-header text-center fw-bold">Lista de Clientes</h4>
         
-        
-
+        {% if clientes|length == 0 %}
+        <div class="alert-list alert-info m-3 text-center">
+            Nenhum cliente cadastrado ainda. Clique em <strong>“Cadastrar Cliente”</strong> para adicionar.
+        </div>
+        {% else %}
         {% for cliente in clientes%}
         <div class="d-flex justify-content-between align-items-center mt-2 pb-2 border-bottom">
             <div class="ms-2">
@@ -15,10 +18,15 @@
             <div class="me-2">
                 <a class="btn btn-warning btn-sm" href="{{url_for('detalhes_cliente', id=cliente.id)}}">Pedidos</a>
                 <a class="btn btn-warning btn-sm" href="{{url_for('editar_cliente', id=cliente.id)}}">Editar</a>
-                <a class="btn btn-danger btn-sm" href="{{url_for('deletar_cliente', id=cliente.id)}}">Excluir</a>
+                <a class="btn btn-danger btn-sm"
+                    href="{{ url_for('deletar_cliente', id=cliente.id) }}"
+                    onclick="return confirm('Tem certeza que deseja excluir {{ cliente.nome }}?');">
+                    Excluir
+                </a>
             </div>
         </div>
         {%endfor%}
+        {% endif %}
         
     </div>
 </div>
