criado botão de voltar em paginas

--- a/templates/base.html
+++ b/templates/base.html
@@ -149,6 +149,11 @@
         }, 5000)
       });
     });
+
+    function retornar() {
+      history.back();
+    }
+
   </script>
   {% block scripts %}{% endblock %}
 
