--- a/templates/editar_cliente.html
+++ b/templates/editar_cliente.html
@@ -1,8 +1,10 @@
 {% extends 'base.html' %}
 {% block content %}
-
+<div class="text-md-start">
+  <button class="btn btn-secondary btn-sm px-4" onclick="retornar()">Voltar</button>
+</div>
 <div class="card mt-3 shadow-sm">
-  <h4 class="card-header text-center fw-bold">Editar Cliente</h4>
+      <h4 class="card-header text-center">Editar Cliente</h4>
   <form class="card-body row g-4" method="post">
     
     <!-- Coluna 1 -->
