--- a/templates/ver_os_cliente.html
+++ b/templates/ver_os_cliente.html
@@ -2,8 +2,9 @@
 
 {% block content %}
 
-<h3 class="text-center fw-bold mt-3">Informações Básicas</h3>
-
+<div class="text-md-start">
+  <button class="btn btn-secondary btn-sm px-4" onclick="retornar()">Voltar</button>
+</div>
 <!-- Informações do Cliente -->
 <div class="card shadow-sm text-center mt-3">
   <h5 class="card-header fw-bold">Informações do Cliente</h5>
