--- a/templates/cadastrar_os.html
+++ b/templates/cadastrar_os.html
@@ -1,8 +1,10 @@
 {% extends 'base.html' %}
 {% block content %}
-
+<div class="text-md-start w-100 rounded-3 mx-auto" style="max-width: 45rem">
+  <button class="btn btn-secondary btn-sm px-4" onclick="retornar()">Voltar</button>
+</div>
 <div class="d-flex justify-content-center">
-  <div class="card shadow-sm w-100 rounded-3 mx-auto my-3" style="max-width: 55rem">
+  <div class="card shadow-sm w-100 rounded-3 mx-auto my-3" style="max-width: 45rem">
 
     <!-- Informações do Cliente -->
     <h5 class="card-header fw-bold">Informações do Cliente</h5>
@@ -20,7 +22,7 @@
 
 <!-- Formulário de Cadastro da OS -->
 <div class="d-flex justify-content-center">
-  <div class="card shadow-sm w-100 rounded-3 mx-auto my-3" style="max-width: 55rem">
+  <div class="card shadow-sm w-100 rounded-3 mx-auto my-3" style="max-width: 45rem">
     <h5 class="card-header fw-bold text-center">Cadastrar Ordem de Serviço</h5>
     <form class="card-body row g-3" method="post">
       
