--- a/templates/editar_peca.html
+++ b/templates/editar_peca.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
-
+<div class="text-md-start w-100 rounded-3 mx-auto" style="max-width: 45rem">
+  <button class="btn btn-secondary btn-sm px-4" onclick="retornar()">Voltar</button>
+</div>
 <div class="d-flex justify-content-center">
   <div class="card shadow-sm w-100 rounded-3 mx-auto my-3" style="max-width: 45rem">
     
